@@ -41,4 +41,6 @@ MOSTLYCLEANFILES = $(DX_CLEANFILES)
 DISTCHECK_CONFIGURE_FLAGS = $(CONFIGURE_ARGS) \
         --with-sysusersdir=no \
         --with-systemdsystemunitdir=no \
-	--with-launchddaemonsdir=no
+	--with-launchddaemonsdir=no \
+	--with-apparmordir=no
+
